// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonText control to the left 1`] = `
<ButtonText
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  justify={0}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  notheme={false}
  obj="ButtonText"
  onClick={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "borderColor": "green",
      "color": "white",
    }
  }
  testing={true}
  text="test text"
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    id={null}
    imageFile=""
    justify={0}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noicon={false}
    noripple={false}
    notheme={false}
    obj="ButtonText"
    onClick={[Function]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "blue",
        "borderColor": "green",
        "color": "white",
      }
    }
    testing={true}
    text="test text"
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-text ripple test-class"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "blue",
            "borderColor": "green",
            "color": "white",
          }
        }
        visible={true}
      >
        <StyledComponent
          className="ui-button-text ripple test-class"
          disabled={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-dnqmqq",
                "isStatic": false,
                "lastClassName": "bcNLX",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-dnqmqq",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "blue",
              "borderColor": "green",
              "color": "white",
            }
          }
          visible={true}
        >
          <div
            className="ui-button-text ripple test-class sc-dnqmqq bcNLX"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "blue",
                "borderColor": "green",
                "color": "white",
              }
            }
          >
            <styled.div
              justify={0}
              sizing="normal"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-htoDjs",
                      "isStatic": false,
                      "lastClassName": "lxjuw",
                      "rules": Array [
                        "
	flex: 1;
	padding: 0 0.2em;
	text-align: ",
                        [Function],
                        ";
	",
                        [Function],
                        ";

	span {
		margin: 0 auto;
		user-select: none;
	}
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-htoDjs",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                justify={0}
                sizing="normal"
              >
                <div
                  className="sc-htoDjs lxjuw"
                >
                  test text
                </div>
              </StyledComponent>
            </styled.div>
            <Icon
              bottom={null}
              className={null}
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage={null}
              focus={false}
              height={null}
              iconName="bomb"
              id={null}
              imageFile=""
              left={null}
              location="none"
              minHeight={null}
              minWidth={null}
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              obj="Icon"
              padding={null}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip={null}
              top={null}
              visible={true}
              width={null}
              xcss={null}
            >
              <Wrapper
                bottom={null}
                className={null}
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage={null}
                focus={false}
                height={null}
                iconName="bomb"
                id={null}
                imageFile=""
                left={null}
                location="none"
                minHeight={null}
                minWidth={null}
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                obj="Icon"
                onError={[Function]}
                padding={null}
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip={null}
                top={null}
                visible={true}
                width={null}
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "fontFamily": "OpenSans, Georgia, serif",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom={null}
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <StyledComponent
                      bottom={null}
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "hBOHvv",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      padding={null}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height={null}
                        id={null}
                        selected={false}
                        style={Object {}}
                        width={null}
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonText>
`;

exports[`Test disabling of a ButtonText control 1`] = `
<ButtonText
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  justify={1}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  notheme={false}
  obj="ButtonText"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    id={null}
    imageFile=""
    justify={1}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noicon={false}
    noripple={false}
    notheme={false}
    obj="ButtonText"
    onClick={[MockFunction]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text=""
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-text nohover"
        disabled={true}
        onClick={[Function]}
        style={Object {}}
        visible={true}
      >
        <StyledComponent
          className="ui-button-text nohover"
          disabled={true}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-dnqmqq",
                "isStatic": false,
                "lastClassName": "cQLLYk",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-dnqmqq",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button-text nohover sc-dnqmqq cQLLYk"
            disabled={true}
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              bottom={null}
              className={null}
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage={null}
              focus={false}
              height={null}
              iconName="bomb"
              id={null}
              imageFile=""
              left={null}
              location="none"
              minHeight={null}
              minWidth={null}
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              obj="Icon"
              padding={null}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip={null}
              top={null}
              visible={true}
              width={null}
              xcss={null}
            >
              <Wrapper
                bottom={null}
                className={null}
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage={null}
                focus={false}
                height={null}
                iconName="bomb"
                id={null}
                imageFile=""
                left={null}
                location="none"
                minHeight={null}
                minWidth={null}
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                obj="Icon"
                onError={[Function]}
                padding={null}
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip={null}
                top={null}
                visible={true}
                width={null}
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "fontFamily": "OpenSans, Georgia, serif",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom={null}
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <StyledComponent
                      bottom={null}
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "hBOHvv",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      padding={null}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height={null}
                        id={null}
                        selected={false}
                        style={Object {}}
                        width={null}
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
            <styled.div
              justify={1}
              sizing="normal"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-htoDjs",
                      "isStatic": false,
                      "lastClassName": "jJhfaa",
                      "rules": Array [
                        "
	flex: 1;
	padding: 0 0.2em;
	text-align: ",
                        [Function],
                        ";
	",
                        [Function],
                        ";

	span {
		margin: 0 auto;
		user-select: none;
	}
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-htoDjs",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                justify={1}
                sizing="normal"
              >
                <div
                  className="sc-htoDjs jJhfaa"
                />
              </StyledComponent>
            </styled.div>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonText>
`;

exports[`Test making a ButtonText control invisible 1`] = `
<ButtonText
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  justify={1}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  notheme={false}
  obj="ButtonText"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    id={null}
    imageFile=""
    justify={1}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noicon={false}
    noripple={false}
    notheme={false}
    obj="ButtonText"
    onClick={[MockFunction]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text=""
    theme={null}
    tooltip={null}
    top={null}
    visible={false}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-text ripple"
        disabled={false}
        onClick={[Function]}
        style={Object {}}
        visible={false}
      >
        <StyledComponent
          className="ui-button-text ripple"
          disabled={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-dnqmqq",
                "isStatic": false,
                "lastClassName": "jgTvXu",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-dnqmqq",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
          style={Object {}}
          visible={false}
        >
          <div
            className="ui-button-text ripple sc-dnqmqq jgTvXu"
            disabled={false}
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              bottom={null}
              className={null}
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage={null}
              focus={false}
              height={null}
              iconName="bomb"
              id={null}
              imageFile=""
              left={null}
              location="none"
              minHeight={null}
              minWidth={null}
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              obj="Icon"
              padding={null}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip={null}
              top={null}
              visible={true}
              width={null}
              xcss={null}
            >
              <Wrapper
                bottom={null}
                className={null}
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage={null}
                focus={false}
                height={null}
                iconName="bomb"
                id={null}
                imageFile=""
                left={null}
                location="none"
                minHeight={null}
                minWidth={null}
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                obj="Icon"
                onError={[Function]}
                padding={null}
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip={null}
                top={null}
                visible={true}
                width={null}
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "fontFamily": "OpenSans, Georgia, serif",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom={null}
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <StyledComponent
                      bottom={null}
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "hBOHvv",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      padding={null}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height={null}
                        id={null}
                        selected={false}
                        style={Object {}}
                        width={null}
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
            <styled.div
              justify={1}
              sizing="normal"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-htoDjs",
                      "isStatic": false,
                      "lastClassName": "jJhfaa",
                      "rules": Array [
                        "
	flex: 1;
	padding: 0 0.2em;
	text-align: ",
                        [Function],
                        ";
	",
                        [Function],
                        ";

	span {
		margin: 0 auto;
		user-select: none;
	}
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-htoDjs",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                justify={1}
                sizing="normal"
              >
                <div
                  className="sc-htoDjs jJhfaa"
                />
              </StyledComponent>
            </styled.div>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonText>
`;

exports[`Test retrieval of ButtonText props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "id": null,
  "imageFile": "",
  "justify": 1,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "noripple": false,
  "notheme": false,
  "obj": "ButtonText",
  "onClick": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "",
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
